# test0331

./: README.md
capsule-0316204-code/: README  run
capsule-0316204-code/CUDA/FaultInjection/: 2mm.cpp1.ii  2mm.cpp4.ii  2mm.cudafe1.c  2mm.cudafe1.cpp  2mm.cudafe1.gpu  2mm.cudafe1.stub.c  2mm.fatbin  2mm.fatbin.c  2mm.module_id  2mm.ptx  2mm.sm_35.cubin  2mm35.sass  2mm35_dup.sass  2mm_dlink.fatbin  Makefile  (+12 more)
capsule-0316204-code/CUDA/ProgramProfiling/ptxGraph/: CMakeLists.txt  README.md  build.sh
capsule-0316204-code/CUDA/ProgramProfiling/ptxGraph/csv/: 2mm.1.sm_20_kernel0_edge.csv  2mm.1.sm_20_kernel0_node.csv  2mm.1.sm_20_kernel1_edge.csv  2mm.1.sm_20_kernel1_node.csv
capsule-0316204-code/CUDA/ProgramProfiling/ptxGraph/dot/: 2mm.1.kernel0.dot  2mm.1.kernel1.dot  draw.sh
capsule-0316204-code/CUDA/ProgramProfiling/ptxGraph/examples/2mm/: 2mm.1.sm_35.ptx  2mm.1.sm_35.ptx.list  RDIStid-threadcount.txt
capsule-0316204-code/CUDA/ProgramProfiling/ptxGraph/examples/2mm/staticFile/: id_1-ptx.txt  id_65537-ptx.txt
capsule-0316204-code/CUDA/ProgramProfiling/ptxGraph/examples/static/: 1.sm_35.ptx.list  RDIStid-threadcount.txt  id_1-ptx.txt  id_101-ptx.txt  id_1025-ptx.txt  id_1125-ptx.txt
capsule-0316204-code/CUDA/ProgramProfiling/ptxGraph/src/: graph.cpp  graph.hpp  ptxGraph.cpp  ptxGraph.hpp  util.cpp  util.hpp  visual.cpp  visual.hpp
capsule-0316204-environment/: Dockerfile
capsule-0316204-metadata/: metadata.yml
results/: 2mm.ptx  2mm_dup.ptx  2mm_dup.sass  2mm_original.ptx  2mm_original.sass  basic.txt  outcome.txt  output  test_data.txt  thread_group.txt
(+130 files in other folders)
